# python_course_gr_A

./: .gitignore  Into-to-Python-Final-Project-to-Submit.ipynb  LICENSE  README.md  conftest.py  requirements.txt  requirements_pytest  setup.cfg  testing_def_encap.ipynb  titanic_stacking_submission-final.csv  tox.ini
.github/workflows/: docs.yml  tests.yml
.ipynb_checkpoints/: titanic_stacking_submission-checkpoint.csv
docs/buildgit/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/buildgit/.doctrees/: environment.pickle  index.doctree
docs/buildgit/.doctrees/notebooks/: usage_example_2.doctree
docs/buildgit/_modules/: index.html
docs/buildgit/_modules/titanic_survival_package/: data_preprocessing.html  feature_engineering.html  hyperparameter_tuning.html  models.html
docs/jupyter_execute/notebooks/: usage_example_2.ipynb
docs/source/: conf.py  index.rst  titanic_survival_package.rst
docs/source/.ipynb_checkpoints/: conf-checkpoint.py
docs/source/notebooks/: usage_example_2.ipynb
preidct_titanic_survival_rate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_feature_engineering.py  test_hyperparameter_tuning.py  test_preprocessing.py
tests/.ipynb_checkpoints/: test_models-checkpoint.py
titanic_survival_package/: data_preprocessing.py  models.py
titanic_survival_package/.ipynb_checkpoints/: __init__-checkpoint.py  feature_engineering-checkpoint.py  hyperparameter_tuning-checkpoint.py
