[metadata]
name = preidct titanic survival rate
description = titanic survival package
version = 0.0.1
author = Bekzod Amonov
author_email = bekzod.amonov@tu-dortmund.de
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bekzod-amonov/titanic_survival_package.git
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11.7
    Programming Language :: Python :: 3.12.0
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
python_requires = >=3.6
packages = titanic_survival_package
install_requires =
    pandas >= 1.0.0
    matplotlib >= 3.2.0
    seaborn >= 0.10.0
    numpy >= 1.18.5
    scikit-learn >= 0.22.0


[options.extras_require]
testing =
    tox >= 3.24
    pytest >= 6.0
    pytest-cov >= 2.10.0

docs =
    sphinx >= 5.1.0
    sphinx-book-theme >= 0.2.0
    numpydoc >= 1.2.1
    myst_nb >= 0.13.1
    sphinx_design >= 0.4.1
